--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,44 @@
-spring.application.name=inventory-system
+# ----------------------------------------
+# 1. MySQL ?????? ?? ??
+# ----------------------------------------
+# [??] DB ?? URL
+# (localhost:3306? inventory_db?? ??? ??????? ?????? ??)
+# (?? DB ??? ????, 'inventory_db' ??? ??????)
+spring.datasource.url=jdbc:mysql://localhost:3306/inventory_db?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
+
+# [??] DB ??? ?? (??? MySQL ???? ??)
+spring.datasource.username=root
+
+# [??] DB ???? (??? MySQL ????? ??)
+spring.datasource.password=43214321
+
+# [??] ??? ???? ??? ??
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# ----------------------------------------
+# 2. JPA & Hibernate ??
+# ----------------------------------------
+# [??] JPA? DB? ??? ? ??? ??(Dialect) ??
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# [??] JPA? ???? SQL ??? ??? ???? ?? (?? ? true)
+spring.jpa.show-sql=true
+
+# [?? ??] Spring? ??? ?, Entity ???? ?? DB ???? ???? ??/???? ??
+# - create: ?? ?? ? ?? ???? ???? ?? ?? (????)
+# - update: ?? ???? ????, ??? ??? ?? (???)
+# - validate: Entity? ???? ????? ??? ?
+# - none: ???? ?? ?? (???)
+spring.jpa.hibernate.ddl-auto=update
+
+# ----------------------------------------
+# 3. JWT (JSON Web Token) ??
+# ----------------------------------------
+# (?? ??: ? Secret Key? ?????. ?? ?? ??? ??? ??? ??? ???? ???? ???.)
+jwt.secret=NaengjangGoatSecretKeyNaengjangGoatSecretKey1234567890
+# Access Token ?? ?? (?: 1?? = 1000ms * 60s * 60min)
+jwt.access-token-expiration-ms=3600000
+# Refresh Token ?? ?? (?: 7? = 1000ms * 60s * 60min * 24h * 7d)
+jwt.refresh-token-expiration-ms=604800000
+
+
