--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -66,3 +66,6 @@ kamis.api.action.daily=dailySalesList
 
 # 2? API (??? ?? ??) ? ?? ??
 kamis.api.action.period=periodProductList
+
+spring.batch.job.enabled=false
+spring.batch.jdbc.initialize-schema=always
