--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,30 +42,14 @@ jwt.access-token-expiration-ms=3600000
 jwt.refresh-token-expiration-ms=604800000
 
 
-
 #########################################
-# KAMIS API CONFIG
+# KAMIS API CONFIG (Final)
 #########################################
-
-# 6? API ?? URL
-kamis.api.base-url=http://www.kamis.co.kr/service/price/xml.do
-
-# ?? ??
+kamis.api.base-url=http://www.kamis.or.kr/service/price/xml.do
 kamis.api.key=c7db4fde-1344-4f12-b708-e5f54a4c25f5
 kamis.api.id=6879
-
-# ?? ??(JSON ??)
-kamis.api.return-type=json
-
-#########################################
-# ACTION
-#########################################
-
-# 6? API (???? ??? ??)
 kamis.api.action.daily=dailySalesList
-
-# 2? API (??? ?? ??) ? ?? ??
-kamis.api.action.period=periodProductList
-
 spring.batch.job.enabled=false
 spring.batch.jdbc.initialize-schema=always
+
+kamis.api.return-type=xml
