--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,11 +45,8 @@ jwt.refresh-token-expiration-ms=604800000
 #########################################
 # KAMIS API CONFIG (Final)
 #########################################
-kamis.api.base-url=http://www.kamis.or.kr/service/price/xml.do
+kamis.api.base-url=https://www.kamis.or.kr/service/price/xml.do
 kamis.api.key=c7db4fde-1344-4f12-b708-e5f54a4c25f5
 kamis.api.id=6879
-kamis.api.action.daily=dailySalesList
-spring.batch.job.enabled=false
-spring.batch.jdbc.initialize-schema=always
-
 kamis.api.return-type=xml
+kamis.api.action.daily=dailyPriceByCategoryList
